--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -8,8 +8,7 @@
     android:paddingBottom="16dp"
     android:paddingLeft="16dp"
     android:paddingRight="16dp"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.example.brom.webviewapp.MainActivity"
+    tools:context="org.brohede.marcus.listviewapp.MainActivity"
     tools:showIn="@layout/activity_main">>
 
     <ListView
