--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,9 @@
     <ListView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/my_listview">
+        android:id="@+id/my_listview"
+        android:divider="#00000000"
+        >
     </ListView>
 
 </android.support.constraint.ConstraintLayout>
