--- a/app/src/main/res/layout/list_item_textview.xml
+++ b/app/src/main/res/layout/list_item_textview.xml
@@ -2,6 +2,13 @@
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/my_item_textview">
+    android:id="@+id/my_item_textview"
+    android:textSize="18sp"
+    android:paddingLeft="20dp"
+    android:paddingTop="15dp"
+    android:fontFamily="times new roman"
+    android:height="60dp"
+    android:background="@null"
 
+    >
 </TextView>
